# CPP-Experimenting

cmake_qt_example/: CMakeLists.txt  application.qrc  main.cpp  mainwindow.cpp  mainwindow.h
swig_wrapper/: Example.py  Makefile  example.i  file1.cpp  file1.h  setup.py
wrap_construtor/: CMakeLists.txt  Car.cpp  Car.h  Intercept.cpp  README.md  simpletest  simpletest.cpp
wrap_construtor/CMakeScripts/: build_samples.cmake
